<package>
  <name>ati_netft_hardware</name>
  <version>0.1.0</version>
  <description>ATI netft force sensor device interface.</description>
  <maintainer email="kalevatykhia@gmail.com">Igor Kalevatykh</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ati_netft_hardware/wiki</url>
  <url type="bugtracker">https://github.com/ati_netft_hardware/issues</url>
  <url type="repository">https://github.com/ati_netft_hardware</url>

  <author>Igor Kalevatykh</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>urdf</build_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>pluginlib</build_depend>   
  <build_depend>hardware_interface</build_depend> 
  <build_depend>composite_hardware_interface</build_depend>   
  <build_depend>emergency_hardware_interface</build_depend>
  <build_depend>netft_rdt_driver</build_depend>
  <run_depend>roscpp</run_depend>   
  <run_depend>pluginlib</run_depend>   
  <run_depend>hardware_interface</run_depend> 
  <run_depend>composite_hardware_interface</run_depend>   
  <run_depend>emergency_hardware_interface</run_depend>
  <run_depend>netft_rdt_driver</run_depend>  

  <export>
    <composite_hardware_interface plugin="${prefix}/ati_netft_device_plugin.xml"/>    	
  </export>

</package>
