<?xml version="1.0"?>
<package>
  <name>wsg_force_control</name>
  <version>0.0.0</version>
  <description>The wsg_force_control package</description>
  <maintainer email="ubu-bk@todo.todo">ubu-bk</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>wsg_50_driver</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>wsg_50_driver</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
