<?xml version="1.0"?>
<package>
  <name>kawasaki_description</name>
  <version>1.0.0</version>
  <description>The kawasaki_description package</description>

  <maintainer email="kalevatykhia@gmail.com">Igor Kalevatykh</maintainer>
  <author email="kalevatykhia@gmail.com">Igor Kalevatykh</author>
  <license>LGPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
